# cro3

./: .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  DIR_METADATA  LICENSE  Makefile  OWNERS  PRESUBMIT.cfg  PRESUBMIT.py  README.md  WATCHLISTS  __init__.py  android_build.py  apache_log_metrics.py  apache_log_metrics_unittest.py  artifact_info.py  autoupdate.py  autoupdate_lib.py  autoupdate_unittest.py  build_artifact.py  build_artifact_unittest.py  build_util.py  builder.py  builder_test.py  buildutil.py  cherrypy_ext.py  cherrypy_ext_unittest.py  chromeos-setdevpasswd  cipd.yaml  client_id_uploader.py  common_util.py  common_util_unittest.py  constants.py  copy_metadata.sh  crdev  cros_gcc_config  cros_generate_stateful_update_payload  cros_generate_update_payload  (+53 more)
.git-ps/hooks/: list_additional_information  request_review_post_sync
.github/workflows/: make.yml  rust-clippy.yml  rust.yml  typescript.yml
apache/: apache2.conf  apache2.conf.trusty  devserver  htaccess  ports.conf  setup_apache.sh
assets/: index.css  index.html  index.js
checkfiles/devserver/: gs_check.py
contrib/: OWNERS  README.md  arm_trusted_firmware_uprev  cargo2ebuild.py  cleanup_crates.py  common.sh  cros_check_firmware_tarball  cros_unibuild_convert.py  cros_update_firmware  deploy_termina  device_summary.sh  dut-console  feedback-unpack  findfix.py  force_chrome_binpkg.py  forward_usb_devices.py  fromupstream.py  gbatch  gen_uprev_msg.py  get_binhost.py  get_device_info.sh  get_local_manifest  git-clean-refs  graphviz_overlays.py  kernel_decode_stack  lease_helper.sh  merge-kernel  mod_recovery_for_decryption.sh  power_qual_compare.py  pylintrc  repo-patch  search_blocked_words.sh  servoinfo  setup_cros_cargo_home  shflags  update_aosp.sh  update_gpu_drivers.sh  update_program_fw  uprev_firmware.sh  uprev_scp_firmware.sh  (+3 more)
contrib/branch_tools/: .fwcp_config_example  cros_update_branch  cros_update_branch.readme.md
contrib/chameleon/: generate_igtrc.sh
contrib/chromium_metadata/: chromium_metadata.py  chromium_metadata_test.py
contrib/coil_urls/: coil_urls.py  coil_urls_test.py
contrib/copybot/: .flake8  README.md  conftest.py  copybot.py  run_tests.sh  service_config.yaml  service_spawner.py  test_copybot.py
contrib/corp-ssh-helper-helper/: README.md  corp-ssh-helper-helper-client.py  corp-ssh-helper-helper-server.py
contrib/cros_openwrt/: OWNERS  README.md  build_cros_openwrt_os_image.sh  sysupgrade_openwrt_ap.sh
contrib/cvetriager/: setup.py
contrib/emacs/: README.md  cros-sdk-tramp.el  generate-cs-path.el  gerrit-section.el  gerrit.el  manifest_parser.py  repo-transient.el
contrib/fflash/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  build.bash  build.ninja  go.mod  go.sum  go_mod.bzl
contrib/fflash/cmd/dut-agent/: BUILD.bazel  agent.bzl  agent.go
contrib/fflash/cmd/fflash/: BUILD.bazel  fflash.go
contrib/fflash/cmd/integration-test/: BUILD.bazel  main.go
contrib/fflash/internal/: BUILD.bazel  cli.go  cli_test.go  device.go  device_test.go  gsutil.go  main.go  reboot.go  request.go  version.go  version_test.go
contrib/fflash/internal/dut/: BUILD.bazel  const.go  dut.go  flash.go  main.go  partition.go  request.go  stateful.go  util.go
contrib/fflash/internal/embedded-agent/: BUILD.bazel  arch.go  embed.go  embed_stub.go
contrib/fflash/internal/logging/: BUILD.bazel  setup.go
contrib/fflash/internal/misc/: BUILD.bazel  gsutil.go
contrib/fflash/internal/partitions/: BUILD.bazel  partition.go  partition_test.go
contrib/fflash/internal/progress/: BUILD.bazel  progress.go
contrib/fflash/internal/rate/: BUILD.bazel  rate.go  ring.go  ring_test.go
contrib/fflash/internal/ssh/: BUILD.bazel  dialer.go  ssh.go  testing_rsa.go  tunnel.go
contrib/findmissing/: .gitconfig  .gitignore  README.md  cloudsql_interface.py  common.py  config.py  findmissing  findmissing.py  findmissing_command.sh  gerrit_interface.py  getopen  getopen.py  getstat.py  git_interface.py  initdb_chromeos.py  initdb_patch.py  initdb_stable.py  initdb_upstream.py  main.py  missing.py  patch.py  pylintrc  requirements.txt  setup.sh  synchronize.py  util.py
contrib/firmware/: get_region_size.sh  intel_sync_upstream.sh  swap_ec_rw
contrib/forklift/: README.md  forklift.py  git.py  pull_request.py  resolver.py
contrib/gfx/: OWNERS  README.md  cros_container_info.py  (+6 more)
dev-install/: 99devinstall  OWNERS  bashrc  dev_install  dev_install.sh  make.conf  make.defaults  repository.conf
docs/: cmdline.md  cmdline_preface.md  index.md
gs_cache/: .vpython  constants.py  fake_omaha.py  fake_telemetry.py  gs_archive_server.py  gs_archive_server_test.py  nebraska_wrapper.py  nginx_access_log_metrics.py  pytest.ini  range_response.py  tarfile_utils.py  telemetry_setup.py
host/: OWNERS  blockdiff.py  brillo_update_payload  cros_bundle_firmware  cros_choose_profile  cros_chrome_make  cros_fetch_image  cros_generate_stateful_update_payload  cros_generate_update_payload  cros_overlay_list  cros_sign_bootstub  cros_start_vm  cros_stop_vm  cros_workon  cros_workon_make  cros_write_firmware  dump_i2c  dump_tpm  gdb_remote  gdb_x86_local  gmergefs  image_to_live.sh  netboot_firmware_settings.py  outside_chroot_common.sh  paycheck.py  repo_bash_completion  ssh_no_update  start_devserver  strip_package  test_paycheck.sh  willis  write_tegra_bios
lib/: OWNERS
nebraska/: OWNERS  README.md  appindex_unittest.py  nebraska.conf  nebraska.py  nebraska_unittest.py  request_unittest.py  response_unittest.py  run_unittests  sample.json  unittest_common.py
net/: OWNERS  gen_control_files.py  parse_net_log.py  unblocked_terms.txt
quick-provision/: quick-provision
scripts/: bash_completion_check.sh  cmdline_doc_check.sh  deploy_release.sh  prepare_kernel.sh  update_tast_analyzer.sh
src/: DIR_METADATA  OWNERS  README.md  abtest.rs  arc.rs  bluebench.rs  cache.rs  chroot.rs  cmd.rs  config.rs  cros.rs  dut.rs  google_storage.rs  index.ts  lib.rs  linux.rs  main.rs  parser.rs  repo.rs  servo.rs  tast.rs  util.rs
templates/: index.html
test/: OWNERS  fast_build.sh
(+1159 files in other folders)
