[package]
name = "lium"
version = "0.1.1"
edition = "2021"

[dependencies]
argh = "0.1.9"
regex = "1"
anyhow = "1.0.65"
regex-macro = "0.2.0"
dirs = "4.0"
serde_json = {version = "1.0", features = ["preserve_order"]}
url = "2.3.1"
rand = "0.8.5"
chrono = "0.4.22"
tempdir = "0.3.7"
async-process = "1.5.0"
termion = "2.0.1"
futures = "0.3"
nix = "0.26.1"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.5"
lazy_static = "1.4.0"
base64 = "0.21.0"
glob = "0.3.1"
macaddr = "1.0"
retry = "2.0.0"
pretty_assertions = "1.4.0"
