[package]
name = "lium"
description = "Abstraction Layer of ChromiumOS development"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/google/lium"

[dependencies]
argh = "0.1.12"
regex = "1"
anyhow = "1.0.75"
regex-macro = "0.2.0"
dirs = "5.0"
serde_json = {version = "1.0", features = ["preserve_order"]}
url = "2.4.1"
rand = "0.8.5"
chrono = "0.4.31"
tempdir = "0.3.7"
async-process = "1.7.0"
termion = "2.0.1"
futures = "0.3"
nix = "0.27.1"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.8"
lazy_static = "1.4.0"
base64 = "0.21.4"
glob = "0.3.1"
macaddr = "1.0"
retry = "2.0.0"
pretty_assertions = "1.4.0"
wait-timeout = "0.2.0"
num_cpus = "1.16.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
