# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fflash_lib",
    srcs = ["fflash.go"],
    importpath = "chromium.googlesource.com/chromiumos/platform/dev-util.git/contrib/fflash/cmd/fflash",
    visibility = ["//visibility:private"],
    deps = [
        "//internal",
        "//internal/logging",
    ],
)

go_binary(
    name = "fflash",
    embed = [":fflash_lib"],
    visibility = ["//visibility:public"],
)
