# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "integration-test_lib",
    srcs = ["main.go"],
    importpath = "chromium.googlesource.com/chromiumos/platform/dev-util.git/contrib/fflash/cmd/integration-test",
    visibility = ["//visibility:private"],
    deps = [
        "//internal",
        "//internal/logging",
        "//internal/ssh",
        "@com_github_alecthomas_kingpin//:kingpin",
    ],
)

go_binary(
    name = "integration-test",
    embed = [":integration-test_lib"],
    visibility = ["//visibility:public"],
)
