# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "progress",
    srcs = ["progress.go"],
    importpath = "chromium.googlesource.com/chromiumos/platform/dev-util.git/contrib/fflash/internal/progress",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/rate"],
)
